--- a/pkg/api/scylla/v1/scylla.scylladb.com_scyllaclusters.yaml
+++ b/pkg/api/scylla/v1/scylla.scylladb.com_scyllaclusters.yaml
@@ -113,6 +113,9 @@ spec:
                 cpuset:
                   description: cpuset determines if the cluster will use cpu-pinning for max performance.
                   type: boolean
+                runtimeClassName:
+                  description: runtimeClassName
+                  type: string
                 datacenter:
                   description: datacenter holds a specification of a datacenter.
                   properties:
